fix arrow alignment in tree

--- a/components/Tree/src/Tree.css
+++ b/components/Tree/src/Tree.css
@@ -56,9 +56,7 @@
   border-style: solid;
   border-width: 0.4em 0 0.4em 0.4em;
   border-color: transparent transparent transparent @theme arrowColor;
-  position: relative;
   vertical-align: baseline;
-  right: -0.3em;
 
   &.open {
     transform: rotateZ(90deg);
